# Fastapi-clean-achitecture

app/: .env  entrypoint.sh  main.py  prometheus.yml  pyproject.toml  requirements.txt
app/config/: __init__.py  db.py  settings.py
app/migrations/: env.py
app/migrations/versions/: 470f7bf7e1a5_create_posts_table.py  f23445f7f1b6_init.py
app/models/: __init__.py  base.py  posts.py  users.py
app/presentation/: __init__.py  posts.py  users.py
app/repositories/: BaseRepository.py  __init__.py  posts.py  users.py
app/repositories/exceptions/: __init__.py  exceptions.py
app/repositories/posts/: exceptions.py  posts.py
app/repositories/users/: exceptions.py  users.py
app/schemas/: posts.py  users.py
app/services/: __init__.py  posts.py  users.py
docker/api/: docker-compose.yml  dockerfile
docker/api/.postgres/: postmaster.pid
docker/api/.postgres/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
docker/api/.postgres/base/16384/: 1247  1249  1259  16389  16392  16394  16395  16399  16401  16402  16408  2224  2579  2604  2606  2608  2610  2610_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  (+1 more)
docker/api/.postgres/base/5/: pg_internal.init
docker/api/.postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
