[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ilya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
